--- a/displaytabs/tabs/AccountingUI/ReconcileDebit.html
+++ b/displaytabs/tabs/AccountingUI/ReconcileDebit.html
@@ -23,9 +23,9 @@
             <div style="display: flex;">
                 <div style="flex: 4; margin-left: 10px;">
                     <div class="input-group" style="width: 100%;">
-                        <input rowIndex="1" type="text" class="form-control autocomplete" name="accountName" placeholder="Account" module="GeneralLedgerDebitUI" mainmodule="GeneralLedgerDebitUI" autoname="accountName" helptitle="accountName">
-                        <input rowIndex="1" class="form-control editReconcile HiddenAutoComplete" name="accountName" type="hidden" module="GeneralLedgerDebitUI" mainmodule="GeneralLedgerDebitUI" autoNameField="accountName" value="">
-                        <div class="autocomplete-items" rowIndex="1" module="GeneralLedgerDebitUI" mainmodule="GeneralLedgerDebitUI" autoname="accountName">
+                        <input rowIndex="1" type="text" class="form-control autocomplete" name="accountCode" placeholder="Account" module="GeneralLedgerDebitUI" mainmodule="GeneralLedgerDebitUI" autoname="accountCode" helptitle="accountCode">
+                        <input rowIndex="1" class="form-control editReconcile HiddenAutoComplete" name="accountCode" type="hidden" module="GeneralLedgerDebitUI" mainmodule="GeneralLedgerDebitUI" autoNameField="accountCode" value="">
+                        <div class="autocomplete-items" rowIndex="1" module="GeneralLedgerDebitUI" mainmodule="GeneralLedgerDebitUI" autoname="accountCode">
                         </div>
                     </div>
                 </div>
@@ -39,9 +39,9 @@
             <div style="display: flex;">
                 <div style="flex: 4; margin-left: 10px;">
                     <div class="input-group" style="width: 100%;">
-                        <input rowIndex="2" type="text" class="form-control autocomplete" name="accountName" placeholder="Account" module="GeneralLedgerDebitUI" mainmodule="GeneralLedgerDebitUI" autoname="accountName" helptitle="accountName">
-                        <input rowIndex="2" class="form-control editReconcile HiddenAutoComplete" name="accountName" type="hidden" module="GeneralLedgerDebitUI" mainmodule="GeneralLedgerDebitUI" autoNameField="accountName" value="">
-                        <div class="autocomplete-items" rowIndex="2" module="GeneralLedgerDebitUI" mainmodule="GeneralLedgerDebitUI" autoname="accountName">
+                        <input rowIndex="2" type="text" class="form-control autocomplete" name="accountCode" placeholder="Account" module="GeneralLedgerDebitUI" mainmodule="GeneralLedgerDebitUI" autoname="accountCode" helptitle="accountCode">
+                        <input rowIndex="2" class="form-control editReconcile HiddenAutoComplete" name="accountCode" type="hidden" module="GeneralLedgerDebitUI" mainmodule="GeneralLedgerDebitUI" autoNameField="accountCode" value="">
+                        <div class="autocomplete-items" rowIndex="2" module="GeneralLedgerDebitUI" mainmodule="GeneralLedgerDebitUI" autoname="accountCode">
                         </div>
                     </div>
                 </div>
@@ -55,9 +55,9 @@
             <div style="display: flex;">
                 <div style="flex: 4; margin-left: 10px;">
                     <div class="input-group" style="width: 100%;">
-                        <input rowIndex="3" type="text" class="form-control autocomplete" name="accountName" placeholder="Account" module="GeneralLedgerDebitUI" mainmodule="GeneralLedgerDebitUI" autoname="accountName" helptitle="accountName">
-                        <input rowIndex="3" class="form-control editReconcile HiddenAutoComplete" name="accountName" type="hidden" module="GeneralLedgerDebitUI" mainmodule="GeneralLedgerDebitUI" autoNameField="accountName" value="">
-                        <div class="autocomplete-items" rowIndex="3" module="GeneralLedgerDebitUI" mainmodule="GeneralLedgerDebitUI" autoname="accountName">
+                        <input rowIndex="3" type="text" class="form-control autocomplete" name="accountCode" placeholder="Account" module="GeneralLedgerDebitUI" mainmodule="GeneralLedgerDebitUI" autoname="accountCode" helptitle="accountCode">
+                        <input rowIndex="3" class="form-control editReconcile HiddenAutoComplete" name="accountCode" type="hidden" module="GeneralLedgerDebitUI" mainmodule="GeneralLedgerDebitUI" autoNameField="accountCode" value="">
+                        <div class="autocomplete-items" rowIndex="3" module="GeneralLedgerDebitUI" mainmodule="GeneralLedgerDebitUI" autoname="accountCode">
                         </div>
                     </div>
                 </div>
@@ -71,9 +71,9 @@
             <div style="display: flex;">
                 <div style="flex: 4; margin-left: 10px;">
                     <div class="input-group" style="width: 100%;">
-                        <input rowIndex="4" type="text" class="form-control autocomplete" name="accountName" placeholder="Account" module="GeneralLedgerDebitUI" mainmodule="GeneralLedgerDebitUI" autoname="accountName" helptitle="accountName">
-                        <input rowIndex="4" class="form-control editReconcile HiddenAutoComplete" name="accountName" type="hidden" module="GeneralLedgerDebitUI" mainmodule="GeneralLedgerDebitUI" autoNameField="accountName" value="">
-                        <div class="autocomplete-items" rowIndex="4" module="GeneralLedgerDebitUI" mainmodule="GeneralLedgerDebitUI" autoname="accountName">
+                        <input rowIndex="4" type="text" class="form-control autocomplete" name="accountCode" placeholder="Account" module="GeneralLedgerDebitUI" mainmodule="GeneralLedgerDebitUI" autoname="accountCode" helptitle="accountCode">
+                        <input rowIndex="4" class="form-control editReconcile HiddenAutoComplete" name="accountCode" type="hidden" module="GeneralLedgerDebitUI" mainmodule="GeneralLedgerDebitUI" autoNameField="accountCode" value="">
+                        <div class="autocomplete-items" rowIndex="4" module="GeneralLedgerDebitUI" mainmodule="GeneralLedgerDebitUI" autoname="accountCode">
                         </div>
                     </div>
                 </div>
@@ -87,9 +87,9 @@
             <div style="display: flex;">
                 <div style="flex: 4; margin-left: 10px;">
                     <div class="input-group" style="width: 100%;">
-                        <input rowIndex="5" type="text" class="form-control autocomplete" name="accountName" placeholder="Account" module="GeneralLedgerDebitUI" mainmodule="GeneralLedgerDebitUI" autoname="accountName" helptitle="accountName">
-                        <input rowIndex="5" class="form-control editReconcile HiddenAutoComplete" name="accountName" type="hidden" module="GeneralLedgerDebitUI" mainmodule="GeneralLedgerDebitUI" autoNameField="accountName" value="">
-                        <div class="autocomplete-items" rowIndex="5" module="GeneralLedgerDebitUI" mainmodule="GeneralLedgerDebitUI" autoname="accountName">
+                        <input rowIndex="5" type="text" class="form-control autocomplete" name="accountCode" placeholder="Account" module="GeneralLedgerDebitUI" mainmodule="GeneralLedgerDebitUI" autoname="accountCode" helptitle="accountCode">
+                        <input rowIndex="5" class="form-control editReconcile HiddenAutoComplete" name="accountCode" type="hidden" module="GeneralLedgerDebitUI" mainmodule="GeneralLedgerDebitUI" autoNameField="accountCode" value="">
+                        <div class="autocomplete-items" rowIndex="5" module="GeneralLedgerDebitUI" mainmodule="GeneralLedgerDebitUI" autoname="accountCode">
                         </div>
                     </div>
                 </div>
@@ -103,9 +103,9 @@
             <div style="display: flex;">
                 <div style="flex: 4; margin-left: 10px;">
                     <div class="input-group" style="width: 100%;">
-                        <input rowIndex="6" type="text" class="form-control autocomplete" name="accountName" placeholder="Account" module="GeneralLedgerDebitUI" mainmodule="GeneralLedgerDebitUI" autoname="accountName" helptitle="accountName">
-                        <input rowIndex="6" class="form-control editReconcile HiddenAutoComplete" name="accountName" type="hidden" module="GeneralLedgerDebitUI" mainmodule="GeneralLedgerDebitUI" autoNameField="accountName" value="">
-                        <div class="autocomplete-items" rowIndex="6" module="GeneralLedgerDebitUI" mainmodule="GeneralLedgerDebitUI" autoname="accountName">
+                        <input rowIndex="6" type="text" class="form-control autocomplete" name="accountCode" placeholder="Account" module="GeneralLedgerDebitUI" mainmodule="GeneralLedgerDebitUI" autoname="accountCode" helptitle="accountCode">
+                        <input rowIndex="6" class="form-control editReconcile HiddenAutoComplete" name="accountCode" type="hidden" module="GeneralLedgerDebitUI" mainmodule="GeneralLedgerDebitUI" autoNameField="accountCode" value="">
+                        <div class="autocomplete-items" rowIndex="6" module="GeneralLedgerDebitUI" mainmodule="GeneralLedgerDebitUI" autoname="accountCode">
                         </div>
                     </div>
                 </div>
@@ -119,9 +119,9 @@
             <div style="display: flex;">
                 <div style="flex: 4; margin-left: 10px;">
                     <div class="input-group" style="width: 100%;">
-                        <input rowIndex="7" type="text" class="form-control autocomplete" name="accountName" placeholder="Account" module="GeneralLedgerDebitUI" mainmodule="GeneralLedgerDebitUI" autoname="accountName" helptitle="accountName">
-                        <input rowIndex="7" class="form-control editReconcile HiddenAutoComplete" name="accountName" type="hidden" module="GeneralLedgerDebitUI" mainmodule="GeneralLedgerDebitUI" autoNameField="accountName" value="">
-                        <div class="autocomplete-items" rowIndex="7" module="GeneralLedgerDebitUI" mainmodule="GeneralLedgerDebitUI" autoname="accountName">
+                        <input rowIndex="7" type="text" class="form-control autocomplete" name="accountCode" placeholder="Account" module="GeneralLedgerDebitUI" mainmodule="GeneralLedgerDebitUI" autoname="accountCode" helptitle="accountCode">
+                        <input rowIndex="7" class="form-control editReconcile HiddenAutoComplete" name="accountCode" type="hidden" module="GeneralLedgerDebitUI" mainmodule="GeneralLedgerDebitUI" autoNameField="accountCode" value="">
+                        <div class="autocomplete-items" rowIndex="7" module="GeneralLedgerDebitUI" mainmodule="GeneralLedgerDebitUI" autoname="accountCode">
                         </div>
                     </div>
                 </div>
@@ -135,9 +135,9 @@
             <div style="display: flex;">
                 <div style="flex: 4; margin-left: 10px;">
                     <div class="input-group" style="width: 100%;">
-                        <input rowIndex="8" type="text" class="form-control autocomplete" name="accountName" placeholder="Account" module="GeneralLedgerDebitUI" mainmodule="GeneralLedgerDebitUI" autoname="accountName" helptitle="accountName">
-                        <input rowIndex="8" class="form-control editReconcile HiddenAutoComplete" name="accountName" type="hidden" module="GeneralLedgerDebitUI" mainmodule="GeneralLedgerDebitUI" autoNameField="accountName" value="">
-                        <div class="autocomplete-items" rowIndex="8" module="GeneralLedgerDebitUI" mainmodule="GeneralLedgerDebitUI" autoname="accountName">
+                        <input rowIndex="8" type="text" class="form-control autocomplete" name="accountCode" placeholder="Account" module="GeneralLedgerDebitUI" mainmodule="GeneralLedgerDebitUI" autoname="accountCode" helptitle="accountCode">
+                        <input rowIndex="8" class="form-control editReconcile HiddenAutoComplete" name="accountCode" type="hidden" module="GeneralLedgerDebitUI" mainmodule="GeneralLedgerDebitUI" autoNameField="accountCode" value="">
+                        <div class="autocomplete-items" rowIndex="8" module="GeneralLedgerDebitUI" mainmodule="GeneralLedgerDebitUI" autoname="accountCode">
                         </div>
                     </div>
                 </div>
@@ -151,9 +151,9 @@
             <div style="display: flex;">
                 <div style="flex: 4; margin-left: 10px;">
                     <div class="input-group" style="width: 100%;">
-                        <input rowIndex="9" type="text" class="form-control autocomplete" name="accountName" placeholder="Account" module="GeneralLedgerDebitUI" mainmodule="GeneralLedgerDebitUI" autoname="accountName" helptitle="accountName">
-                        <input rowIndex="9" class="form-control editReconcile HiddenAutoComplete" name="accountName" type="hidden" module="GeneralLedgerDebitUI" mainmodule="GeneralLedgerDebitUI" autoNameField="accountName" value="">
-                        <div class="autocomplete-items" rowIndex="9" module="GeneralLedgerDebitUI" mainmodule="GeneralLedgerDebitUI" autoname="accountName">
+                        <input rowIndex="9" type="text" class="form-control autocomplete" name="accountCode" placeholder="Account" module="GeneralLedgerDebitUI" mainmodule="GeneralLedgerDebitUI" autoname="accountCode" helptitle="accountCode">
+                        <input rowIndex="9" class="form-control editReconcile HiddenAutoComplete" name="accountCode" type="hidden" module="GeneralLedgerDebitUI" mainmodule="GeneralLedgerDebitUI" autoNameField="accountCode" value="">
+                        <div class="autocomplete-items" rowIndex="9" module="GeneralLedgerDebitUI" mainmodule="GeneralLedgerDebitUI" autoname="accountCode">
                         </div>
                     </div>
                 </div>
@@ -167,9 +167,9 @@
             <div style="display: flex;">
                 <div style="flex: 4; margin-left: 10px;">
                     <div class="input-group" style="width: 100%;">
-                        <input rowIndex="10" type="text" class="form-control autocomplete" name="accountName" placeholder="Account" module="GeneralLedgerDebitUI" mainmodule="GeneralLedgerDebitUI" autoname="accountName" helptitle="accountName">
-                        <input rowIndex="10" class="form-control editReconcile HiddenAutoComplete" name="accountName" type="hidden" module="GeneralLedgerDebitUI" mainmodule="GeneralLedgerDebitUI" autoNameField="accountName" value="">
-                        <div class="autocomplete-items" rowIndex="10" module="GeneralLedgerDebitUI" mainmodule="GeneralLedgerDebitUI" autoname="accountName">
+                        <input rowIndex="10" type="text" class="form-control autocomplete" name="accountCode" placeholder="Account" module="GeneralLedgerDebitUI" mainmodule="GeneralLedgerDebitUI" autoname="accountCode" helptitle="accountCode">
+                        <input rowIndex="10" class="form-control editReconcile HiddenAutoComplete" name="accountCode" type="hidden" module="GeneralLedgerDebitUI" mainmodule="GeneralLedgerDebitUI" autoNameField="accountCode" value="">
+                        <div class="autocomplete-items" rowIndex="10" module="GeneralLedgerDebitUI" mainmodule="GeneralLedgerDebitUI" autoname="accountCode">
                         </div>
                     </div>
                 </div>
