In Progress - Report 360

--- a/home.html
+++ b/home.html
@@ -376,6 +376,7 @@
   <script src="js/modules/AccountingUI.js"></script>
   <script src="js/modules/GovernmentUI.js"></script>
   <script src="js/modules/HospitalUI.js"></script>
+  <script src="js/modules/ReportUI.js"></script>
 
   <script src="js/modules/submodules/PersonTaskUI.js"></script>
   <script src="js/modules/submodules/EmployeeTimeSheetUI.js"></script>
