--- a/displaytabs/ReportUI-MainTemplate.html
+++ b/displaytabs/ReportUI-MainTemplate.html
@@ -24,14 +24,14 @@
                                     <h3 class="box-title">Parameters</h3>
                                 </div>
                                 <div class="box-body" style="display: flex; flex-direction: column;">
-                                    <div class="form-group" style="margin-left: 15px;">
-                                        <label>Choose Report</label>
-                                        <select class="form-control" rowindex="0" module="ReportUI" name="param1">
-                                            <option>Yes</option>
-                                            <option>No</option>
-                                          </select>
-                                    </div>
-                                    <div>
+                                    <div class="reportParameters">
+                                        <div class="form-group" style="margin-left: 15px;">
+                                            <label>Choose Report</label>
+                                            <select class="form-control" rowindex="0" module="ReportUI" name="param1">
+                                                <option>Yes</option>
+                                                <option>No</option>
+                                              </select>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="box-footer text-center">
@@ -41,7 +41,7 @@
                         </div>
                     </div>
                     <div style="flex: 4; margin-left: 15px;">
-                        <iframe id="reportFrame" class="reportFrame" src="" style="width: 100%; height:500px;" report="AutoReport" webkitAllowFullScreen mozAllowFullScreen allowfullscreen></iframe>
+                        <iframe id="reportFrame" module="ReportUI" src="" style="width: 100%;" report="AutoReport" webkitAllowFullScreen mozAllowFullScreen allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
