--- a/home.html
+++ b/home.html
@@ -35,6 +35,7 @@
   <link rel="stylesheet" href="css/jquery.dataTables.css">
   <!-- home.css -->
   <link rel="stylesheet" href="css/home.css">
+  <link rel="stylesheet" href="css/home.responsive.css">
   <link rel="stylesheet" href="css/autocomplete.css">
   <link rel="stylesheet" href="css/slim-scroll.css">
   <link rel="stylesheet" href="css/responsive.dataTables.css">
