In Progress - Report 360

--- a/displaytabs/ReportUI-MainTemplate.html
+++ b/displaytabs/ReportUI-MainTemplate.html
@@ -53,6 +53,7 @@
                             </div>
                             <div class="box-footer text-center">
                                 <button type="button" module="ReportUI" class="btn btn-primary btnRunReport">Run Report</button>
+                                <button type="button" module="ReportUI" class="btn btn-primary btnDownloadExcel">Download Excel</button>
                             </div>
                         </div>
                     </div>
