In Progress - Report 360

--- a/displaytabs/ReportUI-MainTemplate.html
+++ b/displaytabs/ReportUI-MainTemplate.html
@@ -13,7 +13,7 @@
                     <div style="flex: 1; flex-direction: column;">
                         <div class="form-group" style="margin-left: 15px;">
                             <label>Choose Report</label>
-                            <select class="form-control" rowindex="0" module="ReportUI" name="report">
+                            <select class="form-control" rowindex="0" module="ReportUI" name="report" size=5>
                             </select>
                         </div>
                         <div style="margin-top: 15px;">
