--- a/displaytabs/tabs/AccountingUI/Header.html
+++ b/displaytabs/tabs/AccountingUI/Header.html
@@ -3,7 +3,7 @@
 <h1>
     Accounting 360
 </h1>
-<ol class="breadcrumb">
+<!-- <ol class="breadcrumb">
     <li>
         <a href="#" class="pull-right btn-box-tool toggle-box" toggletarget=".AccountingUI_Header">Toggle</a>
     </li>
@@ -46,4 +46,4 @@
         </div>
     </div>
     <input type="hidden" name="HrRequisitionId" placeholder="0" class="no-border mainId" module="HrRequisitionUI">
-</div>
+</div> -->
