--- a/displaytabs/tabs/GovernmentUI/Header.html
+++ b/displaytabs/tabs/GovernmentUI/Header.html
@@ -2,7 +2,7 @@
 <h1>
     Government 360
 </h1>
-<ol class="breadcrumb">
+<!-- <ol class="breadcrumb">
     <li>
         <a href="#" class="pull-right btn-box-tool toggle-box" toggletarget=".GovernmentUI_Header">Toggle</a>
     </li>
@@ -54,4 +54,4 @@
         </div>
     </div>
     <input type="hidden" name="HrRequisitionId" placeholder="0" class="no-border mainId" module="HrRequisitionUI">
-</div>
+</div> -->
