--- a/displaytabs/EmployeeUI-MainTemplate.html
+++ b/displaytabs/EmployeeUI-MainTemplate.html
@@ -7,11 +7,11 @@
         <div id="dynamikoMainContent" style="flex: 70%; padding-right: 10px; margin-left: 0px;" class="row">
             <div class="nav-tabs-custom" style="margin-top: 5px;">
                 <ul class="nav nav-tabs">
-                    <li class="tab-pane active">
+                    <!-- <li class="tab-pane active">
                         <a href="#Dashboard" data-toggle="tab" aria-expanded="true">Dashboard</a>
-                    </li>
+                    </li> -->
                     <li class="tab-pane">
-                        <a href="#Profile" data-toggle="tab" aria-expanded="false">Profile</a>
+                        <a href="#Profile" data-toggle="tab" aria-expanded="true">Profile</a>
                     </li>
                     <!-- <li class="tab-pane">
                         <a href="#Finance" data-toggle="tab" aria-expanded="false">Finance</a>
@@ -21,7 +21,7 @@
                     </li> -->
                 </ul>
                 <div class="tab-content no-padding">
-                    <div class="tab-pane active" id="Dashboard">
+                    <div class="tab-pane" id="Dashboard">
                         <div style="display: flex; background: #ecf0f5;">
                             <div style="flex: 25%; margin: 15px 0px;">
                                 <div class="DisplayTabCommon" tabUrl="ToDoList"></div>
@@ -43,7 +43,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="tab-pane" id="Profile">
+                    <div class="tab-pane active" id="Profile">
                         <div style="display: flex; background: #ecf0f5;">
                             <div style="flex: 30%; margin: 15px 0px;">
                                 <div class="DisplayTabCommon" tabName="Employee360Profile" tabUrl="EmployeeProfile"></div>
