--- a/displaytabs/ReportUI-MainTemplate.html
+++ b/displaytabs/ReportUI-MainTemplate.html
@@ -25,6 +25,9 @@
                                     <li class="tab-pane">
                                         <a href="#Columns" data-toggle="tab" aria-expanded="false">Columns</a>
                                     </li>
+                                    <li class="tab-pane">
+                                        <a href="#PageSetup" data-toggle="tab" aria-expanded="false">Page Setup</a>
+                                    </li>
                                 </ul>
                                 <div class="tab-content no-padding">
                                     <div class="tab-pane active" id="Parameters">
@@ -45,6 +48,30 @@
                                             </div>
                                             <div class="box-body" style="display: flex; flex-direction: column;">
                                                 <div class="reportColumns">
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="tab-pane" id="PageSetup">
+                                        <div class="box box-default">
+                                            <div class="box-header with-border" style="text-align: center;">
+                                                <h3 class="box-title">Page Setup</h3>
+                                            </div>
+                                            <div class="box-body" style="display: flex; flex-direction: column;">
+                                                <div class="paperSizes">
+                                                    <div class="form-group" style="margin-left: 15px;">
+                                                        <label>Choose Paper</label>
+                                                        <select paramName="paperSize" class="form-control reportParam" rowindex="0" module="ReportUI" name="paperSize">
+                                                            <option></option>
+                                                        </select>
+                                                    </div>
+                                                    <div class="form-group" style="margin-left: 15px;">
+                                                        <label>Paper Orientation</label>
+                                                        <select paramName="paperOrientation" class="form-control reportParam" rowindex="0" module="ReportUI" name="paperOrientation">
+                                                            <option value="Portrait">Portrait</option>
+                                                            <option value="Landscape">Landscape</option>
+                                                        </select>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
